# ds-poke

./: .env  .gitignore  Dockerfile  Dockerfile.dev  README.md  WORKSPACE  docker-compose.yml  prometheus.yml  pyproject.toml  pytest.ini
.github/actions/: quality.yaml  test.yaml
.github/workflows/: quality.yaml  test.yaml
db/cards/: pokemon.json  sets-eng.json  sets-jp.json
db/models/label_classifier/: classifier.joblib
k8s/: README.md
k8s/details/: details.yaml
k8s/images/: images.yaml
k8s/kafka/: kafka.yaml
k8s/market/: market.yaml
k8s/namespace/: namespace.yaml
k8s/postgres/: postgres.yaml
k8s/redis/: redis.yaml
k8s/zookeeper/: zookeeper.yaml
services/: docker-compose.yml
src/: main.ipynb  main.py  scripts.py
src/classification/: __init__.py  au_classifier.py  cgc_label_classifier.py  classification.ipynb  classification_cgc.ipynb  classification_cgc2.ipynb  classification_oneshot.ipynb
src/dataset/: __init__.py  analysis.ipynb  cards.py  cgc.py  classification.py  dataset.ipynb  pkmncards.py  pokemontcg.py  pokumon.py  prepare_classification.ipynb  prepare_classification_cgc.ipynb  prepare_classification_one_shot.ipynb  psa.py  psa_pop.ipynb  segmentation.py
src/image/: __init__.py  crop.py  helpers.py  storage.py
src/image/helpers/: __init__.py  color.py  compare.py  crop.py  display.py
src/scrape/: __init__.py  browser.py  cgc.py  download_listing_images.py  executor.py  market_executor.py  pokumon.py  process_images.py  process_listings.py  process_scrape.py
src/scrape/cgc/: cert.py
src/scrape/databases/: __init__.py  pokumon.py
src/scrape/graders/: __init__.py
src/scrape/graders/cgc/: __init__.py  cert.py
src/scrape/graders/psa/: pop.py  price.py
src/scrape/markets/: __init__.py  ebay.py  executor.py  log.py  market.py  mercari.py  process_images.py  process_scrape.py  pwcc.py  yahoo_auctions.py
src/scrape/markets/tests/: test_yahoo_auctions.py
src/scrape/psa/: __init__.py  pop.py  price.py
src/scrape/source/: __init__.py
src/scrape/source/cgc/: __init__.py  is_front.py  label_classifier.py  main.py  scraper.py
src/scripts/: lint.py  main.py  notebook.py  precommit.py
src/scripts/archive/: reformat_json.py
src/segmentation/: Yolov7_test.ipynb  classical_cv.ipynb  generate.py  segmentation.ipynb  segmentation_prepare_dataset.ipynb  tensorflow_segmentation-CNNs.ipynb  tensorflow_segmentation.ipynb
src/services/: details.py  images.py  market.py
src/shared/: __init__.py  cache.py  constant.py  consumer.py  error.py  file.py  json.py  log.py  producer.py  time.py  warning.py
src/shared/db/: __init__.py  engine.py
src/shared/image/: __init__.py  color.py  crop.py
src/shared/message/: consumer.py  producer.py
src/shared/models/: __init__.py  base.py  listing.py  seller.py
src/shared/models/enums/: __init__.py  listing_status.py  market.py
src/shared/storage/: __init__.py  base.py  dataframe.py  image.py  image_storage.py  json.py  json_storage.py
src/shared/threading/: __init__.py  kafka_worker.py  message_worker.py  worker.py
