[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["haydendaly <hcd36@cornell.edu>"]

[tool.poetry.scripts]
lint = "src.scripts.lint:main"
cgc = "src.scrape.source.cgc:main"
jupyter = "python -m ipykernel install --user --name=pokemon_identification --display-name='Pokemon Identification' && poetry run jupyter notebook"

[tool.poetry.dependencies]
python = "^3.9"
absl-py = "1.4.0"
anyio = "3.6.2"
appnope = "0.1.3"
argon2-cffi = "21.3.0"
argon2-cffi-bindings = "21.2.0"
asttokens = "2.2.1"
async-timeout = "4.0.2"
attrs = "22.2.0"
backcall = "0.2.0"
beautifulsoup4 = "4.11.2"
bleach = "6.0.0"
cachetools = "5.3.0"
certifi = "2022.12.7"
cffi = "1.15.1"
charset-normalizer = "3.0.1"
click = "8.0.4"
clip = {git = "https://github.com/openai/CLIP.git", rev = "a9b1bf5920416aaeaec965c25dd9e8f98c864f16"}
comm = "0.1.2"
contourpy = "1.0.7"
cycler = "0.11.0"
Cython = "0.29.33"
dataclasses = "0.6"
debugpy = "1.6.6"
decorator = "5.1.1"
defusedxml = "0.7.1"
ebaysdk = "2.2.0"
exceptiongroup = "1.1.0"
executing = "1.2.0"
faiss-cpu = "1.7.3"
fastjsonschema = "2.16.2"
filelock = "3.9.0"
fire = "0.5.0"
fonttools = "4.38.0"
ftfy = "6.1.1"
google-auth = "2.16.1"
google-auth-oauthlib = "0.4.6"
grpcio = "1.51.3"
h11 = "0.14.0"
httpcore = "0.16.3"
httpx = "0.23.3"
huggingface-hub = "0.12.1"
idna = "3.4"
importlib-metadata = "6.0.0"
importlib-resources = "5.12.0"
ipykernel = "6.21.2"
ipython = "8.10.0"
ipython_genutils = "0.2.0"
ipywidgets = "8.0.4"
isoduration = "20.11.0"
jedi = "0.18.2"
Jinja2 = "3.1.2"
joblib = "1.2.0"
jsonpointer = "2.3"
jsonschema = "4.17.3"
jupyter = "1.0.0"
jupyter-console = "6.6.0"
jupyter-events = "0.6.3"
jupyter-client = "8.0.3"
jupyter-core = "5.2.0"
jupyter-server = "2.3.0"
jupyter-server-terminals = "0.4.4"
jupyterlab-pygments = "0.2.2"
jupyterlab-widgets = "3.0.5"
kafka-python = "2.0.2"
kiwisolver = "1.4.4"
lxml = "4.9.2"
Markdown = "3.4.1"
MarkupSafe = "2.1.2"
matplotlib = "3.7.0"
matplotlib-inline = "0.1.6"
mistune = "2.0.5"
nbclassic = "0.5.2"
nbclient = "0.7.2"
nbconvert = "7.2.9"
nbformat = "5.7.3"
nest-asyncio = "1.5.6"
nodeenv = "1.7.0"
notebook = "6.5.2"
notebook-shim = "0.2.2"
numpy = "1.24.2"
oauthlib = "3.2.2"
opencv-python = "4.7.0.68"
outcome = "1.2.0"
packaging = "23.0"
pandas = "1.5.3"
pandocfilters = "1.5.0"
parso = "0.8.3"
pexpect = "4.8.0"
pickleshare = "0.7.5"
black = "^23.3.0"
Pillow = "9.4.0"
platformdirs = "3.0.0"
prisma = "0.8.1"
aiohttp = "^3.8.4"
chardet = "^5.1.0"
urllib3 = "^1.26.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
